--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-MONGO_HOST=cluster0.g4btt7g.mongodb.net
-MONGO_PASSWORD=evoucherApi123
-MONGO_USER=evoucherApi
-MONGO_DATABASE=testing
-PORT=8000
+MODE=dev
+CONN=mongodb://localhost:27017/evoucher
+PORT=3002
+ACCESS_TOKEN_EXPIRATION=10000
+REFRESH_TOKEN_EXPIRATION=1000000
+TOKEN_SECRET=evoucher_2023
