--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MODE=dev
 CONN=mongodb://localhost:27017/evoucher
 PORT=3002
-ACCESS_TOKEN_EXPIRATION=10000
-REFRESH_TOKEN_EXPIRATION=1000000
+ACCESS_TOKEN_EXPIRATION=2d # 2 days
+REFRESH_TOKEN_EXPIRATION=30d # 30 days
 TOKEN_SECRET=evoucher_2023
