--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ PORT=3002
 ACCESS_TOKEN_EXPIRATION=2d # 2 days
 REFRESH_TOKEN_EXPIRATION=30d # 30 days
 TOKEN_SECRET=evoucher_2023
+REFRESH_COOKIE_NAME=evoucher_2023
+COOKIE_SECRET=evoucher_2023
