--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "joi": "^17.9.2",
     "jwt-decode": "^3.1.2",
