--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MODE=dev
-CONN=mongodb://localhost:27017/evoucher
+CONN=mongodb+srv://evoucherApi:evoucherApi123@cluster0.g4btt7g.mongodb.net/?retryWrites=true&w=majority
 PORT=3002
 ACCESS_TOKEN_EXPIRATION=2d # 2 days
 REFRESH_TOKEN_EXPIRATION=30d # 30 days
